made a navbar on mobile

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     <div class="navbar-on-the-righthandside-profile">
                         <i class="fa-solid fa-bars"></i>
                         <nav id="navbar">
+                            <div id="close-tbn">&times;</div>
                             <ul id="my-list-of-headers">
                                 <li><a href="#Home" class="navbar-styling">Home</a></li>
                                 <li><a href="#About-me" class="navbar-styling">About Me</a></li>
