removing the | sign from the headers

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <!---------------------- section skills ---------------------->
             <section id="Skills">
                 <div class="line-thorugh-the-whole-page-width"></div>
-                <h3>Tech <span class="diff-style-tech"> | Stack</span></h3>
+                <h3>Tech <span class="diff-style-tech">  Stack</span></h3>
 
                 <div class="tech-toolkit">
                     <div class="my-list-stack">
@@ -113,7 +113,7 @@
             <!---------------------- section projects ---------------------->
             <section id="Projects">
                 <div class="line-thorugh-the-whole-page-width"></div>
-                <h4>Here are some of <span class="diff-style-for-projects">| My Projects</span></h4>
+                <h4>Here are some of <span class="diff-style-for-projects"> My Projects</span></h4>
 
                 <div class="all-three-projects-lined-up-in-style">
                     <!-- first project here -->
