changed my profile picture

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="my_avatar-profile-section">
-                    <img src="./asessts/images/profile-avatar.jpg"
+                    <img src="./asessts/images/profile.jpg"
                      alt="Looks like an image of me"
                      class="avatar-pic"
                      >
