Add : changed the menu open animation and added mousedown feature

--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
         <!---------------------- fontawesome icons ---------------------->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.css"/>
 
+        <!-- Primary Meta Tags -->
+        <meta name="title" content="Felix Baah" />
+        <meta name="description" content="Software Developer" />
+        <meta name="navTitle" content="Portfolio" />
+        <meta property="og:site_name" content="Felix Baah" />
+        <meta itemprop="name" content="Felix Baah" />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="website" />
+        <meta property="twitter:url" content="https://x.com/IxKvfi" />
+        <meta property="twitter:title" content="FFMI" />
+        <meta
+        property="twitter:description"
+        content="Software Developer" />
+        <meta property="twitter:image" content="/asessts/images/portfolio-site-icon.jpg" />
+
         <!---------------------- stylesheets ---------------------->
         <link rel="stylesheet" href="static/styles.css">
         <link rel="stylesheet" href="static/media-queries.css">
