Upgrade : updated the site by including new tech stackand new desceription along with new illustrative images

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             <!---------------------- section home ---------------------->
             <section id="Home">
                 <div class="welcome-section-with-developer-type">
-                    <h1>Front-End <span class="diff-style-for-surname">React</span> Developer </h1>
+                    <h1>Full-Stack <span class="diff-style-for-surname">MERN</span> Developer </h1>
                     <p class="paragraph-underneath-heading-profile">
-                        Hi, I am Felix Baah. A passionate Front-end React Developer based in London, United Kingdom 📍
+                        Hi, I am Felix Baah. A passionate Full-Stack MERN Developer based in London, United Kingdom 📍
                     </p>
                 </div>
 
@@ -91,14 +91,14 @@
             <!---------------------- section about me ---------------------->
             <section id="About-me">
                 <div class="illustrations-of-individuals-collaborating">
-                    <img src="./asessts/svg/collaboration-illustration.svg" 
+                    <img src="./asessts/svg/aboutme-img.svg" 
                     alt="Individuals discussing their opinions on matter on projects as illustration" 
                     class="members-collaboration">
                 </div>
 
                 <div class="explanation-of-the-illustration">
                     <h2 class="explanation-styling">
-                        I am a highly skilled Front-end Web developer proficient in HTML, CSS, JavaScript, React, TypeScript, Sass, and Tailwind. With a solid foundation in Python and experience with Firebase, I excel in crafting dynamic and responsive web applications. Known for my collaborative approach, I bring a commitment to innovation and a keen eye for detail to every project.
+                        I’m a university student majoring in Computer Science , passionate about software development 💻 and driven by a curiosity to constantly learn and evolve 🍀. I enjoy playing basketball 🏀, which keeps me balanced and sharp, both on and off the court.
                     </h2>
                 </div>
             </section>
@@ -110,18 +110,34 @@
 
                 <div class="tech-toolkit">
                     <div class="my-list-stack">
+                        <img src="asessts/svg/python.svg" alt="python icon">
+                        <img src="asessts/svg/cpp.svg" alt="c++ icon" style="width: 2rem;">
+                        <img src="asessts/svg/javascript.svg" alt="javascript icon">
+                        <img src="asessts/svg/java.svg" alt="java icon">
+                        <img src="asessts/svg/typescript.svg" alt="typescript icon">
+                    </div>
+                    <div class="my-list-stack">
                         <img src="asessts/svg/html5 badge.svg" alt="html svg icon">
                         <img src="asessts/svg/css3 badge.svg" alt="css icon">
-                        <img src="asessts/svg/javascript.svg" alt="javascript icon">
+                        <img src="asessts/svg/tailwindcss.svg" alt="tailwind css icons">
                         <img src="asessts/svg/react.svg" alt="react icon">
                         <img src="asessts/svg/jquery.svg" alt="jquery icon">
+                        <img src="asessts/svg/firebase.svg" alt="firebase icon">
                     </div>
                     <div class="second-list">
-                        <img src="asessts/svg/tailwindcss.svg" alt="tailwind css icons">
-                        <img src="asessts/svg/typescript.svg" alt="typescript icon">
-                        <img src="asessts/svg/sass.svg" alt="sass icon">
-                        <img src="asessts/svg/python.svg" alt="python icon">
-                        <img src="asessts/svg/firebase.svg" alt="firebase icon">
+                        <img src="asessts/svg/expressjs-dark.svg" alt="expressjs icon" style="width: 2rem;">
+                        <img src="asessts/svg/mongodb.svg" alt="mongodb icon" style="width: 2rem;">
+                        <img src="asessts/svg/mysql.svg" alt="mysql icons" style="width: 2rem;">
+                        <img src="asessts/svg/nodejs.svg" alt="nodejs icon" style="width: 2rem;">
+                        <img src="asessts/svg/postman.svg" alt="postman icon" style="width: 2rem;">
+                        <img src="asessts/svg/socket-io.svg" alt="socket-io icon" style="width: 2rem;">
+                    </div>
+                    <div class="my-list-stack">
+                        <img src="asessts/svg/npm.svg" alt="npm icon" style="width: 2rem;">
+                        <img src="asessts/svg/vite.svg" alt="vite icon" style="width: 2rem;">
+                        <img src="asessts/svg/javascript.svg" alt="vitest icon" style="width: 2rem;">
+                        <img src="asessts/svg/github-actions.svg" alt="github-actions icon" style="width: 2rem;">
+                        <img src="asessts/svg/cypress.svg" alt="cypress icon" style="width: 2rem;">
                     </div>
                 </div>
             </section>
@@ -134,6 +150,28 @@
                 <div class="all-three-projects-lined-up-in-style">
                     <!-- first project here -->
                     <div class="first-project-listed project-style">
+                        <div class="project-image-container">
+                            <img src="asessts/images/taaskify.png" alt="taaskify image" >
+                        </div>
+                        <div class="project-links-container-with-project-name">
+                            <p class="project-header" style="padding: 0rem 1.5rem;">Taaskify | Kanban Management Platform 💻</p>
+                            <p class="project-description">
+                                Taaskify offers a robust, real-time project management solution designed for individuals who value efficiency and flexibility. With customisable Kanban boards, real-time notifications, and secure authentication, stay on top of every project no matter where you are. 
+                            </p>
+                            <div class="tools-Used">
+                                <p class="tool-1">MongoDB && ExpressJS</p>
+                                <p class="tool-2">ReactJS && NodeJS</p>
+                            </div>
+                            <div class="project-repo-demo-container">
+                                <a target="_blank" class="project-repo" href="https://github.com/Felix221123/Taaskify">
+                                    Code <img src="asessts/svg/github badge.svg" alt="github icon" class="github-logo-style">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- second project here -->
+                    <div class="second-project-listed project-style">
                         <div class="project-image-container">
                             <img src="asessts/images/ecommerce-site.png" alt="ecommerce image" >
                         </div>
@@ -158,8 +196,8 @@
                         </div>
                     </div>
 
-                    <!-- second project here -->
-                    <div class="second-project-listed project-style">
+                    <!-- third project here -->
+                    <div class="third-project-listed project-style">
                         <div class="project-image-container">
                             <img src="asessts/images/entertainment-web-app.png" alt="entertainement web app" >
                         </div>
@@ -183,31 +221,6 @@
                         </div>
                     </div>
 
-                    <!-- third project here -->
-                    <div class="third-project-listed project-style">
-                        <div class="project-image-container">
-                            <img src="asessts/images/dev-finder.png" alt="developer finder" >
-                        </div>
-                        <div class="project-links-container-with-project-name">
-                            <p class="project-header">Dev finder 🖥️</p>
-                            <p class="project-description">
-                                A dev finder website that uses githubs API to provide searchability for developers on github, it pulls up individuals information on github and displays it responsively.
-                            </p>
-                            <div class="tools-Used">
-                                <p class="tool-1">Html && Jquery</p>
-                                <p class="tool-2"> TailwindCSS && Sass</p>
-                            </div>
-                            <div class="project-repo-demo-container">
-                                <a target="_blank" class="project-repo" href="https://github.com/Felix221123/GitHub-user-search-web-app">
-                                    Code <img src="asessts/svg/github badge.svg" alt="github icon" class="github-logo-style">
-                                </a>
-                                <a target="_blank" href="https://felix221123.github.io/GitHub-user-search-web-app/" class="project-demo">
-                                    Demo <img src="asessts/svg/links-to-more-projects.svg" alt="link to page" class="live-link-style">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
 
             </section>
@@ -216,7 +229,7 @@
             <section id="Contact">
 
                 <div class="message-logo-for-contact-me">
-                    <img src="./asessts/svg/contact-me-illustration.svg"
+                    <img src="./asessts/svg/socials.svg"
                     alt="This is an illustrations that shows to contact me"
                     class="contact-ilustration">
                 </div>
